# shipwright

./: .gitignore  CARGO_GENERATE_EXAMPLES.md  CARGO_GENERATE_GUIDE.md  HOT_RELOAD_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_CACHING_IMPLEMENTATION.md  TESTING_GUIDE.md  TEST_RESULTS.md  test-basic-hot-reload.sh  test-hot-reload.md  test_hot_reload.rs  testing-guide.md
shipwright-cli/: Cargo.toml  README.md  Shipwright.toml.example
shipwright-cli/src/: config.rs  error.rs  main.rs  workspace.rs
shipwright-cli/src/commands/: build.rs  dev.rs  mod.rs  new.rs  serve.rs
shipwright-cli/tests/: integration_tests.rs
shipwright-liveview/: Cargo.toml  rustc-ice-2025-07-12T10_35_33-78008.txt
shipwright-liveview/examples/: README.md
shipwright-liveview/examples/chat/: Cargo.toml  Shipwright.toml
shipwright-liveview/examples/chat/src/: main.rs
shipwright-liveview/examples/clock/: Cargo.toml  Shipwright.toml
shipwright-liveview/examples/counter/: Cargo.toml  README.md  Shipwright.toml
shipwright-liveview/examples/counter/src/: main.rs
shipwright-liveview/examples/form/: Cargo.toml  Shipwright.toml
shipwright-liveview/examples/key-events/: Cargo.toml  Shipwright.toml
shipwright-liveview/shipwright-liveview/: Cargo.toml
shipwright-liveview/shipwright-liveview-client/: IMPLEMENTATION.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
shipwright-liveview/shipwright-liveview-client/examples/: index.html
shipwright-liveview/shipwright-liveview-client/src/: commands.js.map  commands.ts  connection.ts  (+12 more)
shipwright-liveview/shipwright-liveview-hotreload/: Cargo.toml  PROTOCOL_OPTIMIZATION_SUMMARY.md  README.md  RUNTIME_INTEGRATION.md  TEMPLATE_DIFFING_IMPLEMENTATION.md
shipwright-liveview/shipwright-liveview-hotreload/client/: hot-reload-client.d.ts  hot-reload-client.js  package.json
shipwright-liveview/shipwright-liveview-hotreload/examples/basic/: main.rs
shipwright-liveview/shipwright-liveview-hotreload/src/: benchmarks.rs  build_cache.rs  change_analyzer.rs  diff_integration.rs  dom_diff.rs  enhanced_cache.rs  enhanced_watcher.rs  error_recovery.rs  integration.rs  lib.rs  liveview_integration.rs  logging.rs  parser.rs  performance_monitor.rs  protocol.rs  runtime.rs  server.rs  state_serialization.rs  template_cache.rs  template_diff.rs  template_diff_tests.rs  watcher.rs
shipwright-liveview/shipwright-liveview-hotreload/tests/: integration_test.rs  integration_test_simple.rs  protocol_standalone.rs  protocol_tests.rs
shipwright-liveview/shipwright-liveview-macros/: .gitignore  Cargo.toml  ENHANCED_PARSING.md  LICENSE  README.md
shipwright-liveview/shipwright-liveview/examples/: diff_benchmark.rs  diff_demo.rs
shipwright-liveview/shipwright-liveview/src/: extract.rs  lib.rs
shipwright-liveview/shipwright-liveview/src/diff/: README.md  mod.rs  morphdom.rs  optimizer.rs  parser.rs  patch.rs  tests.rs
shipwright-liveview/shipwright-liveview/src/html/: tests.rs
templates/shipwright/: .cargo-generate  .env.example  .gitignore  Cargo.toml  README.md  cargo-generate.toml  post-script.rhai  pre-script.rhai
templates/shipwright-default-template/: README.md.liquid  cargo-generate.toml
templates/shipwright/config/: default.toml  production.toml
templates/shipwright/crates/{{crate-name}}-config/: .gitignore  Cargo.toml  README.md
templates/shipwright/crates/{{crate-name}}-config/config/: development.toml  production.toml  test.toml
templates/shipwright/crates/{{crate-name}}-config/examples/: basic_usage.rs
templates/shipwright/crates/{{crate-name}}-config/src/: lib.rs  utils.rs
templates/shipwright/crates/{{crate-name}}-db/: Cargo.toml
templates/shipwright/crates/{{crate-name}}-db/src/: lib.rs
templates/shipwright/crates/{{crate-name}}-web/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  build.rs.liquid  docker-compose.test.yml.liquid
templates/shipwright/crates/{{crate-name}}-web/.github/workflows/: test.yml.liquid
templates/shipwright/crates/{{crate-name}}-web/assets/: app.js
templates/shipwright/crates/{{crate-name}}-web/assets/css/: styles.css
templates/shipwright/crates/{{crate-name}}-web/assets/js/: main.js.liquid
templates/shipwright/crates/{{crate-name}}-web/scripts/: test.sh.liquid
templates/shipwright/crates/{{crate-name}}-web/src/: app.rs  lib.rs.liquid  main.rs  state.rs
templates/shipwright/crates/{{crate-name}}-web/src/controllers/: mod.rs
templates/shipwright/crates/{{crate-name}}-web/src/controllers/api/: mod.rs  users.rs  version.rs
templates/shipwright/crates/{{crate-name}}-web/src/controllers/live_view/: counter.rs  dashboard.rs  home.rs  mod.rs
templates/shipwright/crates/{{crate-name}}-web/src/middleware/: logging.rs  mod.rs  request_id.rs
templates/shipwright/crates/{{crate-name}}-web/src/routes/: api.rs  health.rs  live_view.rs  mod.rs
templates/shipwright/crates/{{crate-name}}-web/static/: README.md.liquid
templates/shipwright/crates/{{crate-name}}-web/tests/: README.md.liquid  integration_tests.rs.liquid  test_utils.rs.liquid
templates/shipwright/crates/{{crate-name}}-web/tests/integration/: api_tests.rs.liquid  browser_tests.rs.liquid  mod.rs.liquid  performance_tests.rs.liquid
test-projects/amazing-app/: Dockerfile
test-projects/amazing-app/amazing-app-shared/: Cargo.toml
test-projects/amazing-app/amazing-app-shared/src/: lib.rs
test-projects/hello-world-local/: .env.example  .env.production  .gitignore
test-projects/installed-test/: Cargo.toml  Shipwright.toml
test-projects/installed-test/docs/: README.md  api-reference.md  best-practices.md  getting-started.md  liveview.md
test-projects/installed-test/installed-test-liveview/src/: lib.rs
test-projects/installed-test/installed-test-liveview/src/components/: tabs.rs
test-projects/installed-test/installed-test-server/src/controllers/: mod.rs
test-projects/installed-test/installed-test-shared/: Cargo.toml
test-projects/installed-test/installed-test-shared/src/: lib.rs
test-projects/installed-test/migrations/: 001_initial_setup.sql
test-projects/yeah-ship/: docker-compose.yml
(+112 files in other folders)
