[package]
name = "shipwright-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Shipwright enhanced hot reload system"
authors = ["Shipwright Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/shipwright-rs/shipwright"
keywords = ["web", "framework", "hot-reload", "cli"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "shipwright"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
cargo_metadata = "0.18"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
walkdir = "2.4"
notify = "6.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "compression-gzip"] }
serde_json = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
open = "5.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"