[package]
name = "shipwright-liveview-hotreload"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Parsing and serialization
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket
futures-util = "0.3"
tokio-tungstenite = "0.21"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dashmap = "5.5"
walkdir = "2.4"

# Template processing
blake3 = "1.5"
once_cell = "1.19"

[[bin]]
name = "shipwright-hotreload"
path = "src/bin/hotreload.rs"

[lib]
name = "shipwright_liveview_hotreload"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"