[package]
name = "shipwright-liveview"
version = "0.1.0"
edition = "2021"
categories = ["asynchronous", "network-programming", "web-programming"]
description = "Real-time user experiences with server-rendered HTML"
keywords = ["http", "web", "elm"]
license = "MIT"
readme = "README.md"

[features]
default = []
precompiled-js = []

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8.4", features = ["ws"] }
shipwright-liveview-macros = { path = "../shipwright-liveview-macros", version = "0.1" }
bytes = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
http = "1.0"
percent-encoding = "2.3"
pin-project-lite = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.13"
tokio = { version = "1.40", features = ["sync", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
assert-json-diff = "2.0"