[workspace]
members = [
    "{{project-name}}-server",
{%- if project_type == "full-stack" or project_type == "liveview-app" %}
    "{{project-name}}-frontend",
{%- endif %}
{%- if use_liveview %}
    "{{project-name}}-liveview",
{%- endif %}
    "{{project-name}}-shared",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
{%- if framework == "axum" %}
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "compression", "trace"] }
{%- elif framework == "actix-web" %}
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
{%- elif framework == "rocket" %}
rocket = { version = "0.5", features = ["json"] }
{%- endif %}

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

{%- if hot_reload %}
# Hot reload support
shipwright-liveview-hotreload = { version = "0.1" }
{%- endif %}

{%- if use_liveview %}
# LiveView support
shipwright-liveview = { version = "0.1" }
shipwright-liveview-macros = { version = "0.1" }
{%- endif %}

{%- if database == "postgres" %}
# Database - PostgreSQL
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
{%- elif database == "sqlite" %}
# Database - SQLite
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
{%- elif database == "mysql" %}
# Database - MySQL
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
{%- endif %}

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"

# Development dependencies
[workspace.dev-dependencies]
pretty_assertions = "1"
cargo-nextest = "0.9"