[package]
name = "example-chat"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8.4"
shipwright-liveview = { path = "../../shipwright-liveview", version = "0.1", features = [
  "precompiled-js",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
tower = "0.5"
serde_json = "1.0"
futures-util = "0.3"
tower-http = { version = "0.6", features = ["fs"] }

