[package]
name = "amazing-app-shared"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true

# Configuration
config = { version = "0.14", features = ["toml"] }