[package]
name = "{{crate_name}}-config"
version = "0.1.0"
edition = "2021"
description = "Configuration management for {{project-name}}"
authors = ["{{authors}}"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
dirs = "5.0"
tracing = "0.1"
url = "2.5"
gethostname = "0.4"

# Optional dependencies for advanced features
config = { version = "0.14", optional = true }
figment = { version = "0.10", features = ["toml", "env"], optional = true }
notify = { version = "6.0", optional = true }

[features]
default = ["basic"]
basic = []
advanced = ["config"]
figment-support = ["figment"]
watch = ["notify"]

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["macros", "rt"] }
serde_json = "1.0"
tracing-subscriber = "0.3"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"