[package]
name = "{{crate-name}}-db"
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Database layer for {{project-name}}"
edition.workspace = true
rust-version.workspace = true

[dependencies]
sqlx.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
{{crate-name}}-config = { path = "../{{crate-name}}-config" }